# hfpipe

./: .gitignore  .gitlab-ci.yml  README.md  analysis_24.yaml  pyproject.toml
configs/: analysis_22.yaml  analysis_22_pre.yaml  analysis_23.yaml  analysis_24.yaml  analysis_25.yaml  analysis_25_recovery.yaml  analysis_25_test.yaml  analysis_HI.yaml  analysis_et25.yaml  analysis_etHI.yaml  analysis_etLI.yaml  analysis_oc22.yaml  analysis_oc22_part1.yaml  analysis_oc22_part2.yaml  analysis_oc23.yaml  analysis_oc24.yaml  analysis_oc24_part1.yaml  analysis_oc24_part2.yaml  analysis_oc24_vdm.yaml  analysis_oc25.yaml  analysis_ocHI.yaml  fill10855.yaml
configs/ET/: analysis_22_post.yaml  analysis_23.yaml  analysis_24_test.yaml  analysis_24_working.yaml
configs/OC/: analysis_oc22_vdm.yaml  analysis_oc23.yaml  analysis_oc23_vdm.yaml  analysis_oc24_vdm.yaml  analysis_oc25.yaml  analysis_ocHI.yaml
fill_lists/: HI25.txt  OO25.txt  failed_fills.txt  pp22_part1.txt  pp22_part2.txt  pp23.txt  pp24_part1.txt  pp24_part2.txt  pp25.txt
input/afterglow/: hfet_10843.txt  hfet_lsq_22.txt  hfet_lsq_test.txt  hfet_online_22_pre.txt  hfet_online_25.txt  hfet_online_Apr13_24.txt  hfoc_10843.txt  hfoc_11289.txt  hfoc_online_Apr24_24.txt  hfoc_online_Aug10_22.txt  hfoc_online_oldest.txt  utca.txt
input/reflection/: hfet24.txt  hfet25.txt
src/hfcli/: generate_active_masks.py  run_pipeline.py
src/hfcore/: afterglow_lsq.py  banner.py  bunch_train.py  config.py  decorators.py  hd5schema.py  io.py  online_recovery.py  pipeline.py  plotter.py  type1_apply.py  type1_fit.py
(+15 files in other folders)
