[project]
name = "hfpipe"
version = "0.2.0"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "tables>=3.9",
  "pyyaml>=6.0",
  "typer>=0.12",
  "matplotlib>=3.7",
  "mplhep>=0.3.30",
  "scipy>=1.11",
  "joblib>=1.3",
  "tqdm>=4.66",
]

[project.scripts]
hfpipe = "hfpipe.cli:app"

